feat: Introduce core attachment logic for UI elements

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ Libs/LibRangeCheck-3.0/
 Libs/LibDualSpec-1.0/
 Libs/oUF/
 Libs/TaintLess/
+Libs/AceGUI-3.0-SharedMediaWidgets/
 
 # --- Packager Output ---
 .release/
