--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,5 +16,7 @@ jobs:
 
       - name: Package and Upload
         uses: BigWigsMods/packager@v2
+        with:
+          args: -o
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
